<resources>
    <string name="app_name" translatable="false">Story App - Submission</string>
    <string name="app_image_illustration">App Image Illustration</string>
    <string name="welcome">Welcome To Story App. \nPlease Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="register">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="back_button">Back</string>
    <string name="welcome_logo">Welcome Logo</string>
    <string name="add_new_story">Add New Story</string>
    <string name="story">Story</string>
    <string name="pick_from_camera">Pick From Camera</string>
    <string name="pick_from_gallery">pick From Gallery</string>
    <string name="to_be_uploaded">To be uploaded</string>
    <string name="upload_story">Upload Story</string>
    <string name="type_description_here">Type description here . . .</string>
    <string name="logout">Logout</string>
    <string name="please_input_a_valid_email_that_contains_web_domain">Please input a valid email that contains @web.domain</string>
    <string name="password_must_be_more_than_8_characters">Password must not be less than 8 characters</string>
    <string name="change_app_language">Change App Language</string>
    <string name="map_view">Map View</string>
    <string name="settings">Settings</string>
    <string name="error_getting_data">Error getting data, try again . . .</string>
    <string name="retry">Retry</string>
    <string name="change_app_prompt">Changing app language will causing your app to restart</string>
    <string name="add_my_location_to_story">Add My Location To Story</string>
    <string name="cannot_get_location">Cannot get location.</string>
    <string name="must_activate_gps">You must activate GPS to use this feature!</string>
    <string name="getting_your_location">Getting Your Location . . .</string>
    <string name="location_retrieved">Location Retrieved</string>
    <string name="please_add_image">Please Add Image</string>
    <string name="waiting_for_your_location_data_retrieved">Waiting for your location data retrieved . . .</string>
    <string name="please_add_description">Please add description</string>
</resources>