<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.auth.register.RegisterActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_button"
        android:src="@drawable/round_arrow_back_ios_new_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnBackground"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tv_register_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.satria.dicoding.latihan.storyapp_submission.view.custom.AppCompatValidationEditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:autofillHints="name"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_banner" />

    <com.satria.dicoding.latihan.storyapp_submission.view.custom.CustomEmailEditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:autofillHints="emailAddress"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/edt_name" />

    <com.satria.dicoding.latihan.storyapp_submission.view.custom.CustomPasswordEditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        tools:layout_editor_absoluteX="16dp" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toTopOf="@+id/btn_register" />

</androidx.constraintlayout.widget.ConstraintLayout>