<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".view.new_story.NewStoryActivity">


        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="0dp"
            android:layout_height="500dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/to_be_uploaded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/round_image_24" />

        <Button
            android:id="@+id/galleryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginEnd="8dp"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:text="@string/pick_from_gallery"
            app:layout_constraintBottom_toBottomOf="@+id/cameraButton"
            app:layout_constraintEnd_toStartOf="@+id/cameraButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cameraButton" />

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/pick_from_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/galleryButton"
            app:layout_constraintTop_toBottomOf="@id/previewImageView" />

        <EditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:hint="@string/type_description_here"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="3"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/galleryButton" />

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/upload_story"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_description" />

        <ProgressBar
            android:id="@+id/progressIndicator"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/uploadButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/uploadButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
