<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingBottom="16dp"
    tools:context=".view.setting.SettingActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/round_arrow_back_ios_new_24"
        app:title="@string/app_name" />

    <TextView
        android:id="@+id/tv_change_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_app_language"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar" />

    <ImageView
        android:id="@+id/im_id"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:src="@drawable/indonesia"
        app:layout_constraintEnd_toStartOf="@id/im_en"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_change_lang" />

    <ImageView
        android:id="@+id/im_en"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/england"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/im_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_change_lang" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/im_en" />

</androidx.constraintlayout.widget.ConstraintLayout>